# gpu-deploy-llm

./: .gitignore  BUG_FIX_PLAN.md  README.md  pyproject.toml  test_ollama_local.py  test_tgi_deploy.py  test_vastai_template.py
data/: gpu-shopper.db-shm  gpu-shopper.db-wal
debug-logs/: bug-tracker.md  integration-issues.md  integration-test-runner.py  ops-bugs.md  qa-errors.md  qa-review-2026-02-03.md
gpu_deploy_llm/: __init__.py  __main__.py  cli.py
gpu_deploy_llm/client/: __init__.py  models.py  shopper.py
gpu_deploy_llm/deploy/: __init__.py  benchmark.py  benchmark_store.py  docker_entrypoint.py  health.py  ollama.py  vllm.py
gpu_deploy_llm/diagnostics/: __init__.py  collector.py  logger.py
gpu_deploy_llm/models/: __init__.py  registry.py  requirements.py
gpu_deploy_llm/ssh/: __init__.py  connection.py  diagnostics.py
gpu_deploy_llm/utils/: __init__.py  errors.py  retry.py
gpu_deploy_llm/web/: __init__.py  server.py
gpu_deploy_llm/web/static/: index.html
tests/: __init__.py  test_client_models.py  test_errors.py  test_models.py
