[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-deploy-llm"
version = "0.1.0"
description = "CLI tool to deploy self-hosted LLMs on cloud GPUs via cloud-gpu-shopper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GPU Deploy LLM Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gpu-deploy-llm = "gpu_deploy_llm.__main__:main"

[project.urls]
Homepage = "https://github.com/example/gpu-deploy-llm"
Issues = "https://github.com/example/gpu-deploy-llm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_deploy_llm*"]

[tool.setuptools.package-data]
"gpu_deploy_llm.web" = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
